--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,19 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+#redes-sociais {
+    text-align: right;
+}
+.logo {
+    border-radius: 50%;
+    width: 50px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+.logo:hover {
+    border: 2px solid rgba(255, 255, 255, 0.603);
+    transform:translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform 0.2s, border 0.5s;
+}
